external/lib25519-20241004/build/arm64/unified/fe25519addS/1/shared/result-compile-fe25519_add
fe25519_add.S:40:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
